<resources>
    <string name="app_name">Husky Mingle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TCSS 450 - Group 9</string>
    <string name="nav_header_subtitle">tcss450group9@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_mediterranean_blues_theme">Change Theme: Mediterranean Blues</string>
    <string name="action_shimmering_blues_theme">Change Theme: Shimmering Blues</string>
    <string name="action_turquoise_red_theme">Change Theme: Turquoise Watermelon</string>
    <string name="action_orange_sunset_theme">Change Theme: Orange Sunset</string>

    <string name="nav_menu_textview_chat_title">Chat Fragment</string>
    <string name="nav_menu_textview_connection_title">Connection Fragment</string>
    <string name="nav_menu_textview_landing_title">Landing Fragment</string>
    <string name="nav_menu_textview_search_title">Search Fragment</string>
    <string name="nav_menu_textview_weather_title">Weather Fragment</string>

    <!-- Main Page -->
    <string name="main_edittext_username">Username</string>
    <string name="login_edittext_username">Username</string>
    <string name="login_edittext_password">Password</string>
    <string name="login_button_login_text">Log in</string>
    <string name="login_button_register_text">Register</string>
    <string name="login_textview_invalid_login">Invalid username or password</string>
    <string name="login_checkbox_stay_login">Stay login</string>

    <!-- Registration Page -->
    <string name="register_edittext_email">Email</string>
    <string name="register_edittext_firstname">First Name</string>
    <string name="register_edittext_lastname">Last Name</string>
    <string name="register_edittext_confirm_password">Confirm Password</string>
    <string name="register_button_submit">Submit</string>
    <string name="register_textview_password_requirement">
        Use at least 6 character, one number, one lower case letter, one upper case letter,
        one special character.</string>
    <string name="register_textview_username_requirement">
        Username may only contain alphanumeric characters or _</string>

    <!--Verification Page -->
    <string name="verification_pin_hint">4-Digit Verification Code</string>
    <string name="verification_button_validate">Verify Your Account</string>

    <!-- search Page -->
    <string name="search_textview_title">Search for friends</string>
    <string name="search_textview_search_email">Search by email</string>
    <string name="search_edittext_email">Email</string>
    <string name="search_textview_search_fullname">Search by first name and last name</string>
    <string name="search_textview_firstname">First Name</string>
    <string name="search_textview_lastname">Last Name</string>
    <string name="search_textview_search_username">Search by username</string>
    <string name="search_textview_username">Username</string>
    <string name="search_button_search">Search</string>
    <string name="search_button_request">Send request</string>
    <string name="search_searchview_hint">Search username, names or email</string>

    <!-- Contacts Page -->
    <string name="contacts_edittext_title1">Contacts</string>
    <string name="contacts_edittext_title2">Connection Requests</string>
    <string name="contacts_switch_view_pending">View Requests</string>
    <string name="contacts_switch_view_existing">View Existing</string>
    <string name="contacts_button_add_friend">Add</string>
    <string name="contacts_button_delete_friend">Delete</string>
    <string name="connections_edittext_searchbar">Search</string>
    <string name="connections_popupmenu_item1">Name</string>
    <string name="connections_popupmenu_item2">Username</string>
    <string name="connections_popupmenu_item3">Nickname</string>

    <!-- Connection Requests RecyclerView Item -->
    <string name="contacts_recyclerview_request_accept">Accept</string>
    <string name="contacts_recyclerview_request_reject">Reject</string>

    <!-- Weather Fragment -->
    <string name="weather_edittext_zip_code_search_bar">Zip Code</string>

    <!-- landing Page -->
    <string name="landing_button_logout">Logout</string>

    <!-- chat Page -->
    <string name="chat_textview_send_hint">Write a message</string>
    <string name="chat_spinner_first_row">Add another friend to chat</string>

    <!-- forgot password Page -->
    <string name="forgot_textview_email_hint">Enter your email</string>
    <string name="forgot_question_exclamation">\?!</string>
    <string name="forgot_button_submit_request">Submit Reset Password Request</string>
    <string name="forgot_already_active_request">I Already Have an Active Request</string>


    <!-- reset password Page -->
    <string name="reset_edittext_code_hint">Enter Your Code</string>
    <string name="reset_edittext_new_pass_hint">New Password</string>
    <string name="reset_edittext_confirm_password_hint">Confirm New Password</string>

</resources>
